overlays/prod/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory-api
  namespace: final-assigment
spec:
  replicas: 1
