overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-inventory-api
  namespace: final-assigment
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-assigment.anpt1992.dev
      secretName: cloudflare-origin-cert
  rules:
    - host: api-assigment.anpt1992.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-inventory-api
                port:
                  number: 8080
